--- a/style.css
+++ b/style.css
@@ -7,10 +7,61 @@ section{
     width: 100%;
     height: 100%;
     perspective: 2000px;
+    -webkit-perspective: 2000px;
     text-align: center;
   }
 
-  div{
+  .help-section {
+    position: absolute;
+    left: 0%;
+    right: 0;
+    top: 2.5%;
+    bottom: 0;
+    width: 45%;
+    height: 90vh;
+    font-size: 40px;
+    letter-spacing: 2px;
+    color: white;
+    text-align: center;
+    line-height: 90vh;
+    z-index: -8;
+  }
+
+  .help-p {
+    font-size: 35px;
+  }
+
+  .help-section > p {
+    margin: 0;
+  }
+
+  .skyline-img {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    max-width: 100%;
+  }
+
+  .comic-bubbles {
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    bottom: 5px;
+  }
+
+  .bubble1 {
+    left: 21%;
+  }
+
+  .bubble2 {
+    left: 42%;
+  }
+
+  .bubble3 {
+    left: 65%;
+  }
+
+  .div-container{
     position: absolute;
     left: 50%;
     right: 0;
@@ -20,45 +71,101 @@ section{
     height: 90vh;
     font-size: 40px;
     letter-spacing: 2px;
-    color: #16bbd9;
+    color: white;
     text-align: center;
     border: 10px solid white;
-    text-shadow: 2px 0 2px #fff, -2px 0 2px #fff, 0 -2px 2px #fff, 0 2px 2px #fff;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    /* text-shadow: 2px 0 2px #fff, -2px 0 2px #fff, 0 -2px 2px #fff, 0 2px 2px #fff; */
   }
 
   .div1 {
-    background: #abc;
+    background-image: linear-gradient(#690404 0%, #FF6060 100%);
+    transform-origin: left center;
+    transition: 1s;
+    z-index: 2;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+
+  .div1back {
     transform-origin: left center;
     transition: 1s;
     z-index: 1;
+    /* -webkit-backface-visibility: hidden;
+    backface-visibility: hidden; */
+  }
+
+  .div-small-container {
+    background: #cba;
+    width: 100%;
+    height: 100%;
+    transform: rotateY(180deg);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    background-image: linear-gradient(#690404 0%, #FF6060 100%);
+  }
+
+  .div-small-container > h1 {
+    margin: 0;
   }
 
   .div2 {
     background: #cba;
+    background-image: linear-gradient(#690404 0%, #FF6060 100%);
     transform-origin: left center;
     transition: 1s;   
     z-index: 0;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+
+  .div2back {
+    transform-origin: left center;
+    transition: 1s;
+    z-index: -1;
   }
 
   .div3 {
     background: #cba;
+    background-image: linear-gradient(#690404 0%, #FF6060 100%);
     transform-origin: left center;
     transition: 1s;   
-    z-index: -1;
+    z-index: -2;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+
+  .div3back {
+    transform-origin: left center;
+    transition: 1s;
+    z-index: -3;
   }
 
   .div4 {
     background: #cba;
+    background-image: linear-gradient(#690404 0%, #FF6060 100%);
     transform-origin: left center;
     transition: 1s;   
-    z-index: -2;
+    z-index: -4;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+
+  .div4back {
+    transform-origin: left center;
+    transition: 1s;
+    z-index: -5;
   }
 
   .div5 {
     background: #cba;
+    background-image: linear-gradient(#690404 0%, #FF6060 100%);
     transform-origin: left center;
     transition: 1s;   
-    z-index: -3;
+    z-index: -6;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
   }
 
   .div-active{
@@ -76,7 +183,7 @@ section{
       z-index: 1;
     }
     100% {
-      z-index: -5;
+      z-index: -7;
     }
   }
 
@@ -85,4 +192,143 @@ section{
     transform-origin: right center;
     transition: 1s;
     z-index: 1;
+  }
+
+  .comic-issue {
+    background-color: black;
+    height: 50px;
+  }
+
+  .issue-title {
+    margin: auto 0;
+    font-size: 30px;
+    color: #690404;
+    line-height: 50px;
+  }
+
+  .name {
+    /* letter-spacing: 4px; */
+    /* background-color: rgba(0, 0, 0, .3); */
+    /* padding: 10px; */
+    /* font-family: 'Metal Mania', cursive; */
+    font-family: 'Montserrat Subrayada', sans-serif;
+    margin-bottom: 0;
+    /* font-family: 'Monoton', cursive; */
+  }
+
+  p {
+    font-size: 20px;
+  }
+
+  .contact-title {
+    margin: 10px;
+  }
+
+  input {
+    display: block;
+    width: 400px;
+    height: 50px;
+    margin: 45px auto;
+    font-size: 30px;
+    text-align: center;
+    /* background-color: #B77451; */
+    background-color: white;
+    border: 2px solid black;
+    color: white;
+    /* border-bottom: 2px solid black; */
+    /* border-radius: 5px; */
+    /* box-shadow: 8px 8px 10px -3px rgba(0, 0, 0, .8); */
+    font-family: 'Bangers', cursive;
+    transition: all .3s ease-in-out;
+  }
+
+  input::placeholder {
+    color: white;
+    text-shadow: 2px 0 2px #000, -2px 0 2px #000, 0 -2px 2px #000, 0 2px 2px #000;
+    font-family: 'Bangers', cursive;
+  }
+
+  input:focus {
+    outline: none;
+  }
+
+  input:hover {
+    transform: scale(1.1);
+  }
+
+  textarea {
+      height: 300px;
+      display: block;
+      font-size: 30px;
+      text-align: center;
+      width: 370px;
+      margin: 20px auto;
+      resize: none;
+      /* background-color: #B77451; */
+      background-color: white;
+      border: 2px solid black;
+      text-shadow: 2px 0 2px #000, -2px 0 2px #000, 0 -2px 2px #000, 0 2px 2px #000;
+      /* border-radius:  5px; */
+      /* box-shadow: 8px 8px 10px -3px rgba(0, 0, 0, .8); */
+      font-family: 'Bangers', cursive;
+      color: black;
+      transition: all .3s ease-in-out;
+      padding: 15px;
+  }
+
+  textarea::placeholder {
+    color: white;
+    font-family: 'Bangers', cursive;
+  }
+
+  textarea:hover {
+    transform: scale(1.1);
+  }
+
+  .input-button {
+    width: 100px;
+    height: 50px;
+    /* border: 1px solid black; */
+    border: 2px solid black;
+    /* border-radius: 5px; */
+    text-decoration: none;
+    color: white;
+    font-size: 30px;
+    /* line-height: 50px; */
+    display: block;
+    margin: 0 auto;
+    /* background-color: #B77451; */
+    background-color: white;
+    /* box-shadow: 8px 8px 10px -3px rgba(0, 0, 0, .8); */
+    transition: all .3s ease-in-out;
+    font-family: 'Bangers', cursive;
+    text-shadow: 2px 0 2px #000, -2px 0 2px #000, 0 -2px 2px #000, 0 2px 2px #000;
+  }
+
+  .input-button:focus {
+    outline: none;
+  }
+  
+  .input-button:hover {
+    background-color: black;
+    color: white;
+    transform: scale(1.2);
+  }
+  
+  input:focus {
+    outline: none;
+  }
+  
+  textarea:focus {
+    outline: none;
+  }
+
+  .add-info {
+    margin: 0;
+    padding-top: 30%; 
+    padding-right: 20px;
+    padding-left: 20px;
+    line-height: 2;
+    font-size: 30px;
+    text-shadow: 2px 0 2px #000, -2px 0 2px #000, 0 -2px 2px #000, 0 2px 2px #000;
   }
