--- a/style.css
+++ b/style.css
@@ -22,8 +22,6 @@ section{
     right: 50%;
     top: 0;
     bottom: 0;
-    /* width: 45%; */
-    /* height: 90%; */
     font-size: 40px;
     letter-spacing: 2px;
     color: white;
@@ -51,10 +49,6 @@ section{
     width: 13%;
     height: 13%;
     margin: 20px;
-    /* position: absolute; */
-    /* top: 0%; */
-    /* animation: bubble-pop 1s ease infinite; */
-    /* transition: all .3s ease-in-out; */
   }
 
   .bubble1 {
@@ -104,9 +98,14 @@ section{
     
   }
 
-  /* .comic-bubbles:hover {
-    transform: scale(1.1);
-  } */
+  .hackerman-gif {
+    opacity: .2;
+    position: absolute;
+    left: 15%;
+    top: 45%;
+    width: 50%;
+    height: auto;
+  }
 
   .div-container{
     width: 45vw; 
@@ -119,9 +118,6 @@ section{
     right: 0;
     bottom: 0;
     top: 0;
-    /* width: 45%; */
-    /* height: 90%; */
-    /* padding-top: 45%; */
     font-size: 40px;
     letter-spacing: 2px;
     color: rgb(6, 9, 43);
@@ -129,21 +125,10 @@ section{
     border: 10px solid white;
     -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
-    /* text-shadow: 2px 0 2px #000, -2px 0 2px #000, 0 -2px 1px #000, 0 2px 2px #000; */
-    /* text-shadow: 2px 0 2px #fff, -2px 0 2px #fff, 0 -2px 2px #fff, 0 2px 2px #fff; */
   }
 
-  /* .outer-div {
-    width: 100%;
-    height: 700px;
-  } */
-
   .div1 {
-    /* background-image: linear-gradient(#690404 0%, #FF6060 100%); */
     background-color: rgb(6, 9, 43);
-    /* background-image: linear-gradient(to bottom, rgba(0,0,0, 0) 70%, rgba(255,255,255,1) 100%); */
-    /* background-image: -webkit-radial-gradient(bottom, 60% 40%, white 0%,rgba(0,0,0, 0) 25%,rgba(0,0,0, 0) 100%);
-    background-image: radial-gradient(60% 40% at bottom,white 0%,rgba(0,0,0, 0) 25%,rgba(0,0,0, 0) 100%); */
     background-image: -webkit-radial-gradient(bottom,60% 35%,white,white,rgba(255,255,255, .3),rgba(255,255,255, .2), rgba(255,255,255, .1), rgba(0,0,0, 0));
     background-image: radial-gradient(60% 35% at bottom,white,white,rgba(255,255,255, .3),rgba(255,255,255, .2), rgba(255,255,255, .1), rgba(0,0,0, 0));
     transform-origin: left center;
@@ -158,17 +143,6 @@ section{
   }
 
   @keyframes bg-change {
-    /* 0% {
-      background-image: linear-gradient(#690404 0%, #FF6060 100%);
-    }
-
-    50% {
-      background-image: linear-gradient(#000000 0%, #000020 100%);
-    } 
-
-    100% {
-      background-image: linear-gradient(#690404 0%, #FF6060 100%);
-    } */
     0%, 100% { background-color: rgb(6, 9, 43); }
     16.66% { background-color: rgb(9, 26, 82); }
     33.33% { background-color: rgb(20, 47, 134); }
@@ -181,8 +155,6 @@ section{
     transform-origin: left center;
     transition: 1s;
     z-index: 1;
-    /* -webkit-backface-visibility: hidden;
-    backface-visibility: hidden; */
   }
 
   .div-small-container {
@@ -192,10 +164,7 @@ section{
     transform: rotateY(180deg);
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-    /* background-image: linear-gradient(#690404 0%, #FF6060 100%); */
-    background-image: radial-gradient(circle, lightcoral, tomato);
-    /* background-image: radial-gradient(ellipse farthest-corner, transparent 0%, transparent 35%, rgb(6, 9, 43) 30%, rgb(6, 9, 43) 40%, transparent 90%), radial-gradient(ellipse farthest-corner at 0px 0px, transparent 0%, transparent 20%, rgb(6, 9, 43) 15%, rgb(6, 9, 43) 20%, transparent 50%), radial-gradient(ellipse farthest-corner at 8px 8px, transparent 0%, transparent 20%, rgb(6, 9, 43) 15%, rgb(6, 9, 43) 20%, transparent 50%), radial-gradient(ellipse farthest-corner at 0px 8px, transparent 0%, transparent 20%, rgb(6, 9, 43) 15%, rgb(6, 9, 43) 20%, transparent 40%), radial-gradient(ellipse farthest-corner at 8px 0px, transparent 0%, transparent 20%, rgb(6, 9, 43) 15%, rgb(6, 9, 43) 20%, transparent 50%),  linear-gradient(40deg, #ababab 0, #c7c5c5 30%, #e3e3e3 50%, #c7c5c5 70%, #ababab 100%);
-    background-size: 8px 8px, 8px 8px, 8px 8px, 8px 8px, 8px 8px, 100% 100%; */
+    background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212));
   }
 
   .div-small-container > h1 {
@@ -203,9 +172,7 @@ section{
   }
 
   .div2 {
-    background: #cba;
-    /* background-image: linear-gradient(#690404 0%, #FF6060 100%); */
-    background-color: rgb(6, 9, 43);
+    background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212));
     transform-origin: left center;
     transition: 1s;   
     z-index: 0;
@@ -220,9 +187,7 @@ section{
   }
 
   .div3 {
-    background: #cba;
-    /* background-image: linear-gradient(#690404 0%, #FF6060 100%); */
-    background-color: rgb(6, 9, 43);
+    background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212));
     transform-origin: left center;
     transition: 1s;   
     z-index: -2;
@@ -237,9 +202,7 @@ section{
   }
 
   .div4 {
-    background: #cba;
-    /* background-image: linear-gradient(#690404 0%, #FF6060 100%); */
-    background-color: rgb(6, 9, 43);
+    background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212));
     transform-origin: left center;
     transition: 1s;   
     z-index: -4;
@@ -254,9 +217,7 @@ section{
   }
 
   .div5 {
-    background-image:radial-gradient(circle, lightblue, deepskyblue);
-    /* background-image: linear-gradient(#690404 0%, #FF6060 100%); */
-    background-color: rgb(6, 9, 43);
+    background-image: radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212));
     transform-origin: left center;
     transition: 1s;   
     z-index: -6;
@@ -389,20 +350,12 @@ section{
   }
 
   input::placeholder {
-    color: white;
-    text-shadow: 2px 0 2px #000, -2px 0 2px #000, 0 -2px 2px #000, 0 2px 2px #000;
+    color: black;
     font-family: 'Bangers', cursive;
   }
 
   input:focus {
     outline: none;
-  }
-
-  input:hover {
-    /* transform: scale(1.1); */
-    /* background-color: #f5d742; */
-    /* box-shadow: 8px 8px 10px -3px rgba(0, 0, 0, .8); */
-    /* box-shadow: 8px 8px 10px -3px white; */
   }
 
   textarea {
@@ -417,19 +370,16 @@ section{
       font-size: 30px;
       text-align: center;
       resize: none;
-      /* background-color: #B77451; */
       background-color: white;
       border: 2px solid black;
-      /* border-radius:  5px; */
-      /* box-shadow: 8px 8px 10px -3px rgba(0, 0, 0, .8); */
+
       font-family: 'Bangers', cursive;
       color: black;
       transition: all .3s ease-in-out;
   }
 
   textarea::placeholder {
-    color: white;
-    text-shadow: 2px 0 2px #000, -2px 0 2px #000, 0 -2px 2px #000, 0 2px 2px #000;
+    color: black;
     font-family: 'Bangers', cursive;
   }
 
@@ -446,13 +396,6 @@ section{
     opacity: .3;
   }
 
-  textarea:hover {
-    /* transform: scale(1.1); */
-    /* box-shadow: 8px 8px 10px -3px rgba(0, 0, 0, .8); */
-    /* background-color: #f5d742; */
-    /* box-shadow: 8px 8px 10px -3px white; */
-  }
-
   .input-button {
     width: 15%;
     height: 8%;
@@ -460,17 +403,14 @@ section{
     border: 2px solid black;
     /* border-radius: 5px; */
     text-decoration: none;
-    color: white;
+    color: black;
     font-size: 30px;
     /* line-height: 50px; */
     display: block;
     margin: 0 auto;
-    /* background-color: #B77451; */
     background-color: white;
-    /* box-shadow: 8px 8px 10px -3px rgba(0, 0, 0, .8); */
     transition: all .3s ease-in-out;
     font-family: 'Bangers', cursive;
-    text-shadow: 2px 0 2px #000, -2px 0 2px #000, 0 -2px 2px #000, 0 2px 2px #000;
   }
 
   .input-button:focus {
@@ -479,9 +419,8 @@ section{
   
   .input-button:hover {
     background-color: #f5d742;
-    color: white;
+    color: black;
     transform: scale(1.2);
-    /* box-shadow: 8px 8px 10px -3px white; */
   }
   
   input:focus {
@@ -499,7 +438,6 @@ section{
     padding-top: 35%;
     line-height: 2;
     font-size: 20px;
-    text-shadow: 2px 0 2px #000, -2px 0 2px #000, 0 -2px 2px #000, 0 2px 2px #000;
   }
 
   .panel {
@@ -529,12 +467,6 @@ section{
     transform: skew(-10deg); */
   }
 
-  /* .yellow-textbox:hover {
-    transform: scale(1.1);
-    box-shadow: 8px 8px 10px -3px white;
-
-  } */
-
   .second-panel {
     /* display: flex; */
     /* background-image:radial-gradient(circle, yellow, orange); */
@@ -558,14 +490,21 @@ section{
   }
   
   .fourth-panel {
-    float: right;
-    height: 70%;
-    width: 50%;
+    height: 60%;
+    border-bottom: 10px solid white;
   }
 
   .fifth-panel {
-    
+    height: 40%;
   }
+
+  .to-bottom {
+    position: absolute;
+    bottom: 1%;
+    right: 1%;
+  }
+
+  .sixth-panel {}
 
   .fourteenth-panel {
     float: left;
@@ -630,10 +569,6 @@ section{
     color: #f5d742;
   }
 
-  /* .dotted-back {
-    background-image: radial-gradient(ellipse farthest-corner, transparent 0%, transparent 35%, #fff 30%, #fff 40%, transparent 90%), radial-gradient(ellipse farthest-corner at 0px 0px, transparent 0%, transparent 20%, #fff 15%, #fff 20%, transparent 50%), radial-gradient(ellipse farthest-corner at 8px 8px, transparent 0%, transparent 20%, #fff 15%, #fff 20%, transparent 50%), radial-gradient(ellipse farthest-corner at 0px 8px, transparent 0%, transparent 20%, #fff 15%, #fff 20%, transparent 40%), radial-gradient(ellipse farthest-corner at 8px 0px, transparent 0%, transparent 20%, #fff 15%, #fff 20%, transparent 50%),  linear-gradient(40deg, #bd2d10 0, #f4502f 30%, #ff6e51 50%, #f4502f 70%, #bd2d10 100%);
-  background-size: 8px 8px, 8px 8px, 8px 8px, 8px 8px, 8px 8px, 100% 100%;
-  } */
 
   .project-image {
     width: 100%;
@@ -680,4 +615,39 @@ section{
 
   .icons {
     margin-top: 20px;
+  }
+
+  .panel1-img {
+    display: block;
+    height: 50%;
+    width: auto;
+    margin: 5% auto;
+  }
+
+  .panel2-gif {
+    display: block;
+    height: auto;
+    width: 70%;
+    margin: 20% auto;
+  }
+
+  .panel3-gif {
+    display: block;
+    height: 50%;
+    width: auto;
+    margin: 20% auto;
+  }
+
+  .panel4-img {
+    display: block;
+    height: 90%;
+    width: auto;
+    margin: 2% auto;
+  }
+
+  .panel5-img {
+    display: block;
+    height: 70%;
+    width: auto;
+    margin: 2% auto;
   }
