--- a/style.css
+++ b/style.css
@@ -529,25 +529,65 @@ section{
   }
 
   .seventeenth-panel {
-    float: right;
-    width: 50%;
-    height: 50%;
-  }
-
-  .eighteenth-panel {
-    width: 100%;
     height: 20%;
     border-bottom: 10px solid white;
   }
 
+  .eighteenth-panel {
+    float: left;
+    width: 25%;
+    height: 40%;
+    border-bottom: 10px solid white;
+    border-right: 10px solid white;
+  }
+
   .nineteenth-panel {
-    width: 100%;
+    float: left;
+    width: 25%;
+    height: 40%;
+    border-bottom: 10px solid white;
+    border-right: 10px solid white;
+  }
+
+  .twentieth-panel {
+    float: left;
+    width: 25%;
+    height: 40%;
+    border-bottom: 10px solid white;
+    border-right: 10px solid white;
+  }
+
+  .twentyfirst-panel {
+    float: right;
+    width: 25%;
     height: 40%;
     border-bottom: 10px solid white;
   }
 
-  .twentieth-panel {
-    width: 100%;
+  .twentysecond-panel {
+    float: left;
+    width: 25%;
+    height: 40%;
+    border-right: 10px solid white;
+  }
+
+  .twentythird-panel {
+    float: left;
+    width: 25%;
+    height: 40%;
+    border-right: 10px solid white;
+  }
+
+  .twentyfourth-panel {
+    float: left;
+    width: 25%;
+    height: 40%;
+    border-right: 10px solid white;
+  }
+
+  .twentyfifth-panel {
+    float: right;
+    width: 25%;
     height: 40%;
   }
 
@@ -650,4 +690,40 @@ section{
     height: 70%;
     width: auto;
     margin: 2% auto;
+  }
+
+  .hackerman-div {
+    width: 100%;
+    height: 100%;
+  }
+
+  .hackerman-last {
+    position: absolute;
+    bottom: 5%;
+    display: block;
+    width: 60%;
+    height: auto;
+    margin: 0 auto;
+  }
+
+  .profile {
+    width: 100%;
+    font-size: 30px;
+    margin: 5px;
+    line-height: 1.2;
+    animation: profilepop 2s infinite;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  @keyframes profilepop {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.1);
+    }
+    100% {
+      transform: scale(1);
+    }
   }
