--- a/style.css
+++ b/style.css
@@ -338,6 +338,11 @@ section{
     margin: 10px;
   }
 
+  form {
+    width: 100%;
+    height: 100%;;
+  }
+
   input {
     display: block;
     width: 75%;
