--- a/style.css
+++ b/style.css
@@ -8,34 +8,45 @@ section{
     height: 100vh;
     perspective: 2000px;
     -webkit-perspective: 2000px;
+    -moz-perspective: 2000px;
+    -ms-perspective: 2000px;
     text-align: center;
   }
 
   .help-section {
     width: 45vw; 
-    height: 56.25vw;
-    max-height: 90vh;
-    max-width: 177.78vh;
+    height: 0;
+    padding-top: 44%;
     margin: auto 0;
     position: absolute;
-    left: 0;
+    left: 20px;
     right: 50%;
     top: 0;
     bottom: 0;
-    font-size: 40px;
-    letter-spacing: 2px;
     color: white;
     text-align: center;
-    line-height: 90vh;
     z-index: -8;
+    overflow: hidden;
   }
 
-  .help-p {
-    font-size: 35px;
+  .help-section-inside {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 
-  .help-section > p {
-    margin: 0;
+  .inside-position {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .inside-size {
+    font-size: 3vw;
+    letter-spacing: 2px;
   }
 
   .skyline-img {
@@ -45,85 +56,153 @@ section{
     max-width: 100%;
   }
 
+  /* .bubble-containers {
+    width: 100%;
+    height: 20%;
+  }
+
   .comic-bubbles {
     width: 13%;
     height: 13%;
-    margin: 20px;
-  }
+  } */
 
-  .bubble1 {
+  /* .bubble1 {
+    position: absolute;
     left: 10%;
+    top: 10%;
     animation: bubble-pop 2.5s ease infinite;
   }
 
   .bubble2 {
+    position: absolute;
     left: 38%;
+    top: 10%;
     animation: bubble-pop 2.7s ease infinite;
 
   }
 
   .bubble3 {
+    position: absolute;
+    top: 10%;
     left: 70%;
     animation: bubble-pop 2.6s ease infinite;
 
   }
 
+  @-webkit-keyframes bubble-pop {
+    0%, 100% {
+      transform: scale(0);
+    }
+
+    5%, 40%, 80% {
+      transform: scale(1.3);
+    }
+    20%, 60% {
+      transform: scale(.9);
+    }
+}
+
+@-moz-keyframes bubble-pop {
+  0%, 100% {
+    transform: scale(0);
+  }
+
+  5%, 40%, 80% {
+    transform: scale(1.3);
+  }
+  20%, 60% {
+    transform: scale(.9);
+  }
+}
+
   @keyframes bubble-pop {
-    0% {
+    0%, 100% {
       transform: scale(0);
     }
 
-    5% {
+    5%, 40%, 80% {
       transform: scale(1.3);
     }
-    20% {
+    20%, 60% {
       transform: scale(.9);
     }
+  } */
 
-    40% {
-      transform: scale(1.3);
-    }
+  .comic-issue {
+    background-color: black;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 8%;
+  }
 
-    60% {
-      transform: scale(.9);
-    }
+  .issue-title {
+    color: #f5d742;
+    font-size: 2vw;
+    letter-spacing: 2px;
+  }
 
-    80% {
-      transform: scale(1.3);
-    }
+  .positions {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    font-size: 1vw;
+    color: white;
+  }
 
-    100% {
-      transform: scale(0);
-    }
-    
+  .title-container {
+    position: absolute;
+    left: 0;
+    top: 20%;
+    width: 100%;
+    height: 30%;
+  }
+
+  .name {
+    font-family: 'Bangers', cursive;
+    font-size: 3.8vw;
+    letter-spacing: 7px;
+    margin: 0;
+    color: #f5d742;
+    text-shadow: 2px 0 2px #000, -2px 0 2px #000, 0 -2px 2px #000, 0 2px 2px #000;
+  }
+
+
+  .smaller-name {
+    font-family: 'Bangers', cursive;
+    font-size: 1.5vw;
+    letter-spacing: 7px;
+    margin: 0;
+    color: #f5d742;
+    text-shadow: 2px 0 2px #000, -2px 0 2px #000, 0 -2px 2px #000, 0 2px 2px #000;
   }
 
   .hackerman-gif {
     opacity: .2;
     position: absolute;
     left: 15%;
-    top: 45%;
+    top: 43%;
     width: 50%;
     height: auto;
   }
 
   .div-container{
     width: 45vw; 
-    height: 56.25vw;
-    max-height: 90vh;
-    max-width: 177.78vh;
+    height: 0;
+    padding-top: 45%;
     margin: auto 0;
     position: absolute;
     left: 50%;
     right: 0;
-    bottom: 0;
     top: 0;
-    font-size: 40px;
-    letter-spacing: 2px;
-    color: rgb(6, 9, 43);
+    bottom: 0;
     text-align: center;
+    /* overflow: hidden; */
     border: 10px solid white;
     -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
     transform-style: preserve-3d;
   }
 
@@ -135,21 +214,16 @@ section{
     transition: 1s;
     z-index: 2;
     -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
     backface-visibility: hidden;
     text-shadow: none;
     -webkit-animation: bg-change 20s infinite;
     -moz-animation: bg-change 20s infinite;
+    -ms-animation: bg-change 20s infinite;
     animation: bg-change 20s infinite;
   }
 
   @keyframes bg-change {
-    /* 0%, 100% { background-color: rgb(6, 9, 43); }
-    16.66% { background-color: rgb(9, 26, 82); }
-    33.33% { background-color: rgb(20, 47, 134); }
-    50% { background-color: rgb(92, 162, 255); }
-    66.66% { background-color: rgb(20, 47, 134); }
-    83.33% { background-color: rgb(9, 26, 82); } */
-
     0%, 100% { background-color: rgb(92, 162, 255); }
     16.66% { background-color: rgb(51, 84, 194); }
     33.33% { background-color: rgb(9, 26, 82); }
@@ -165,17 +239,18 @@ section{
   }
 
   .div-small-container {
-    background: #cba;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     transform: rotateY(180deg);
     -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
     backface-visibility: hidden;
     background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212));
-  }
-
-  .div-small-container > h1 {
-    margin: 0;
   }
 
   .div2 {
@@ -184,6 +259,7 @@ section{
     transition: 1s;   
     z-index: 0;
     -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
     backface-visibility: hidden;
   }
 
@@ -199,6 +275,7 @@ section{
     transition: 1s;   
     z-index: -2;
     -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
     backface-visibility: hidden;
   }
 
@@ -214,6 +291,7 @@ section{
     transition: 1s;   
     z-index: -4;
     -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
     backface-visibility: hidden;
   }
 
@@ -229,16 +307,23 @@ section{
     transition: 1s;   
     z-index: -6;
     -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
     backface-visibility: hidden;
   }
 
   .div-active{
     transform: rotateY(-180deg);
+    -webkit-animation: divactive 5s forwards;
+    -moz-animation: divactive 5s forwards;
+    -ms-animation: divactive 5s forwards;
     animation: divactive 5s forwards;
   }
 
 .div-reverse-rotate {
     transform: rotateY(180deg);
+    -webkit-animation: divactive 2s forwards;
+    -moz-animation: divactive 2s forwards;
+    -ms-animation: divactive 2s forwards;
     animation: divactive 2s forwards;
   }
 
@@ -257,78 +342,6 @@ section{
     transition: 1s;
     z-index: 1;
   }
-
-  .comic-issue {
-    background-color: black;
-    height: 50px;
-  }
-
-  .issue-title {
-    margin: auto 0;
-    font-size: 30px;
-    /* color: #690404; */
-    color: #f5d742;
-    line-height: 50px;
-  }
-
-  .name {
-    /* letter-spacing: 4px; */
-    /* background-color: rgba(0, 0, 0, .3); */
-    /* padding: 10px; */
-    /* font-family: 'Metal Mania', cursive; */
-    /* font-family: 'Montserrat Subrayada', sans-serif; */
-    font-family: 'Bangers', cursive;
-    letter-spacing: 8px;
-    margin: 0;
-    /* font-family: 'Monoton', cursive; */
-    color: #f5d742;
-    text-shadow: 2px 0 2px #000, -2px 0 2px #000, 0 -2px 2px #000, 0 2px 2px #000;
-    /* color: transparent; */
-    /* background: linear-gradient(-45deg, #1ed2f4, #2b2b3a, #eafc40);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    background-size: 400% 400%;
-    -webkit-animation: gradient-change 10s linear infinite;
-    -moz-animation: gradient-change 10s linear infinite;
-    animation: gradient-change 10s linear infinite; */
-  }
-
-  @-webkit-keyframes gradient-change {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
-    }
-}
-
-@-moz-keyframes gradient-change {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
-    }
-}
-
-@keyframes gradient-change {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
-    }
-}
 
   p {
     font-size: 20px;
@@ -350,13 +363,9 @@ section{
     margin: 20px auto;
     font-size: 30px;
     text-align: center;
-    /* background-color: #B77451; */
     background-color: white;
     border: 2px solid black;
     color: black;
-    /* border-bottom: 2px solid black; */
-    /* border-radius: 5px; */
-    /* box-shadow: 8px 8px 10px -3px rgba(0, 0, 0, .8); */
     font-family: 'Bangers', cursive;
     transition: all .3s ease-in-out;
   }
@@ -411,13 +420,10 @@ section{
   .input-button {
     width: 15%;
     height: 8%;
-    /* border: 1px solid black; */
     border: 2px solid black;
-    /* border-radius: 5px; */
     text-decoration: none;
     color: black;
     font-size: 30px;
-    /* line-height: 50px; */
     display: block;
     margin: 0 auto;
     background-color: white;
@@ -448,19 +454,17 @@ section{
   }
 
   .add-info {
-    /* text-align: center; */
-    /* margin: 10% auto; */
     padding-right: 20px;
     padding-left: 20px;
-    padding-top: 30%;
+    /* padding-top: 30%; */
     line-height: 2;
-    font-size: 30px;
+    font-size: 2vw;
   }
 
   .panel {
     padding: 5px;
-    font-size: 20px;
-    line-height: 25px;
+    /* font-size: 20px; */
+    /* line-height: 25px; */
     text-align: left;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -469,7 +473,6 @@ section{
 
   .first-panel {
     height: 40%;
-    /* float: left; */
     border-bottom: 10px solid white;
     background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212));
   }
@@ -479,30 +482,22 @@ section{
     padding: 10px;
     border: 2px solid black;
     transition: all .3s ease-in-out;
-    /* -webkit-transform: skew(-10deg); 
-    -moz-transform: skew(-10deg); 
-    transform: skew(-10deg); */
+    font-size: 1.3vw;
+    line-height: 1.3;
   }
 
   .second-panel {
-    /* display: flex; */
-    /* background-image:radial-gradient(circle, yellow, orange); */
-    /* background-image:radial-gradient(circle, rgb(250, 162, 162), rgb(248, 90, 62)); */
-    /* background-image:radial-gradient(circle, rgb(79, 88, 163), rgb(6, 9, 43)); */
     background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212));
     float: left;
     height: 60%;
     width: 50%;
-    /* border-bottom: 10px solid white; */
     border-right: 10px solid white;
   }
 
   .third-panel {
-    /* display: flex; */
     float: right;
     height: 60%;
     width: 50%;
-    /* border-right: 10px solid white; */
     background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212));
   }
   
@@ -527,8 +522,6 @@ section{
     position: absolute;
     bottom: 1%;
     right: 1%;
-    /* margin-bottom: 0px;
-    margin-right: 0px; */
   }
 
   .sixth-panel {
@@ -584,83 +577,76 @@ section{
     background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212));
   }
 
-  /* .sixteenth-panel {
-    float: left;
-    width: 50%;
-    height: 50%;
-    border-right: 10px solid white;
-  } */
-
   .seventeenth-panel {
     height: 20%;
-    border-bottom: 10px solid white;
-    background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212));
+    /* border-bottom: 10px solid white; */
+    /* background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212)); */
   }
 
   .eighteenth-panel {
     float: left;
     width: 25%;
     height: 40%;
-    border-bottom: 10px solid white;
-    border-right: 10px solid white;
-    background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212));
+    /* border-bottom: 10px solid white; */
+    /* border-right: 10px solid white; */
+    /* background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212)); */
   }
 
   .nineteenth-panel {
     float: left;
     width: 25%;
     height: 40%;
-    border-bottom: 10px solid white;
-    border-right: 10px solid white;
-    background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212));
+    /* border-bottom: 10px solid white; */
+    /* border-right: 10px solid white; */
+    /* background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212)); */
   }
 
   .twentieth-panel {
     float: left;
     width: 25%;
     height: 40%;
-    border-bottom: 10px solid white;
-    border-right: 10px solid white;
-    background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212));
+    /* border-bottom: 10px solid white; */
+    /* border-right: 10px solid white; */
+    /* background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212)); */
   }
 
   .twentyfirst-panel {
     float: right;
     width: 25%;
     height: 40%;
-    border-bottom: 10px solid white;
-    background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212));
+    /* border-bottom: 10px solid white; */
+    /* background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212)); */
   }
 
   .twentysecond-panel {
     float: left;
     width: 25%;
     height: 40%;
-    border-right: 10px solid white;
-    background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212));
+    /* border-right: 10px solid white; */
+    /* background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212)); */
   }
 
   .twentythird-panel {
     float: left;
     width: 25%;
     height: 40%;
-    border-right: 10px solid white;
-    background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212));
+    /* border-right: 10px solid white; */
+    /* background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212)); */
   }
 
   .twentyfourth-panel {
     float: left;
     width: 25%;
     height: 40%;
-    border-right: 10px solid white;
-    background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212));
+    /* border-right: 10px solid white; */
+    /* background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212)); */
   }
 
   .twentyfifth-panel {
     float: right;
     width: 25%;
     height: 40%;
-    background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212));
+    /* background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212)); */
   }
 
   a {
@@ -714,7 +700,6 @@ section{
     height: auto;
     border-radius: 5px;
     border: 2px solid black;
-    /* box-shadow: 8px 8px 10px -3px rgba(0, 0, 0, .8); */
 
   }
   
@@ -757,11 +742,16 @@ section{
     margin-top: 20px;
   }
 
+  .inside-panel-img {
+    height: 65%;
+    width: 100% 
+  }
+
   .panel1-img {
     display: block;
-    height: 50%;
-    width: auto;
-    margin: 5% auto;
+    height: 80%;
+    /* width: auto; */
+    /* margin: 5% auto; */
   }
 
   .panel2-gif {
@@ -808,7 +798,7 @@ section{
 
   .panel9-img {
     display: block;
-    height: 50%;
+    height: 80%;
     width: auto;
     margin: 2% auto;
   }
@@ -840,8 +830,6 @@ section{
   }
 
   .hackerman-last {
-    /* position: absolute;
-    bottom: 5%; */
     display: block;
     width: 80%;
     height: auto;
@@ -856,7 +844,7 @@ section{
 
   .profile {
     width: 100%;
-    font-size: 30px;
+    font-size: 2.3vw;
     margin: 5px;
     line-height: 1.2;
     animation: profilepop 2s infinite;
