--- a/style.css
+++ b/style.css
@@ -254,13 +254,24 @@ section{
   }
 
   .div2 {
-    background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212));
     transform-origin: left center;
     transition: 1s;   
     z-index: 0;
+  }
+
+  .div-small-front-container {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* transform: rotateY(180deg); */
     -webkit-backface-visibility: hidden;
     -moz-backface-visibility: hidden;
     backface-visibility: hidden;
+    background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212));
   }
 
   .div2back {
@@ -270,13 +281,9 @@ section{
   }
 
   .div3 {
-    background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212));
     transform-origin: left center;
     transition: 1s;   
     z-index: -2;
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    backface-visibility: hidden;
   }
 
   .div3back {
@@ -286,13 +293,9 @@ section{
   }
 
   .div4 {
-    background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212));
     transform-origin: left center;
     transition: 1s;   
     z-index: -4;
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    backface-visibility: hidden;
   }
 
   .div4back {
@@ -302,13 +305,9 @@ section{
   }
 
   .div5 {
-    background-image: radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212));
     transform-origin: left center;
     transition: 1s;   
     z-index: -6;
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    backface-visibility: hidden;
   }
 
   .div-active{
@@ -353,15 +352,15 @@ section{
 
   form {
     width: 100%;
-    height: 100%;;
+    height: 100%;
   }
 
   input {
     display: block;
     width: 75%;
     height: 8%;
-    margin: 20px auto;
-    font-size: 30px;
+    margin: 3% auto;
+    font-size: 3vw;
     text-align: center;
     background-color: white;
     border: 2px solid black;
@@ -386,9 +385,9 @@ section{
       width: 75%;
       height: 40%;
       padding: 15px;
-      margin: 20px auto;
+      margin: 3% auto;
       display: block;
-      font-size: 30px;
+      font-size: 3vw;
       text-align: center;
       resize: none;
       background-color: white;
@@ -423,7 +422,7 @@ section{
     border: 2px solid black;
     text-decoration: none;
     color: black;
-    font-size: 30px;
+    font-size: 3vw;
     display: block;
     margin: 0 auto;
     background-color: white;
@@ -654,7 +653,7 @@ section{
     text-decoration: none;
     color: white;
     text-shadow: 2px 0 2px #000, -2px 0 2px #000, 0 -2px 2px #000, 0 2px 2px #000;
-    font-size: 40px;
+    font-size: 3vw;
     margin: 20px;
     transition: all .3s ease-in-out;
   }
@@ -914,12 +913,12 @@ section{
 }
 
 .skill-icons {
-  font-size: 60px;
+  font-size: 4vw;
 }
 
 .icon-div {
   display: inline-block;
-  margin: 10px;
+  margin: 1vw;
 }
 
 .postcript {
